--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
         </div>
         <div class="grow-ans" style="--d:3.6s">
           <div class="leaf leaf--3"></div>
+        link rel="stylesheet" href="style.css"
         </div>
       </div>
     </div>
